# vtt-to-ass

./: .gitignore  README.md  pyproject.toml
src/: lib.py  main.py
