[tool.poetry]
name = "kaa"
version = "0.1.0"
description = ""
authors = ["Adolin <benmeft0@gamil.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pysubs2 = "^1.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
